--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   color: #aaabb8;
-  font-size: 24px;
+  font-size: 20px;
 }
 a {
   text-decoration: none;
@@ -19,14 +19,14 @@ ul {
   flex-direction: row;
   gap: 20px;
   align-items: center;
-  margin: 0;
+  margin: 0 10px;
 }
 
 .left-links {
   display: flex;
   justify-content: flex-end;
   background-color: rgba(49, 51, 53, 0.658);
-  padding: 10px;
+  padding: 5px;
 }
 
 .header {
@@ -45,7 +45,7 @@ ul {
   gap: 200px;
   margin-top: 50px;
   margin-right: 220px;
-  padding-top: 150px;
+  padding-top: 50px;
 }
 
 .profile-photo {
@@ -69,7 +69,7 @@ button {
 #arrow {
   display: flex;
   justify-content: center;
-  padding-top: 160px;
+  padding-top: 90px;
   padding-bottom: 60px;
 }
 
@@ -85,20 +85,20 @@ button {
   justify-content: center;
   align-items: center;
   gap: 50px;
-  padding: 250px;
+  padding: 200px;
 }
 
 .description {
   width: 600px;
   color: rgba(0, 0, 0, 0.685);
-  font-size: 24px;
+  font-size: 20px;
   background-color: rgba(240, 248, 255, 0.658);
   border-radius: 25px;
-  padding: 50px;
+  padding: 25px 50px;
 }
 #description-photo {
   box-shadow: 15px 15px 10px rgba(240, 248, 255, 0.562);
-  width: 700px;
+  width: 500px;
 }
 
 /* Technologies */
@@ -135,7 +135,7 @@ button {
   text-align: center;
   background-color: rgba(68, 68, 68, 0.863);
   padding: 75px;
-  color: rgba(0, 0, 0, 0.685);
+  color: rgba(0, 0, 0, 0.603);
 }
 
 .container {
@@ -153,7 +153,7 @@ button {
 
 .footer {
   background-color: rgba(0, 0, 0, 0.952);
-  padding: 50px;
+  padding: 30px;
 }
 
 .footer ul {
