--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,10 @@ button:hover {
   border: 5px solid #aaabb8;
 }
 
+.project-photo:hover {
+  transform: scale(1.1);
+}
+
 .footer {
   background-color: rgba(0, 0, 0, 0.952);
   padding: 30px;
